--- a/style.css
+++ b/style.css
@@ -3,6 +3,8 @@
 body {
     background-color: rgb(34, 34, 34);
     font-family: 'Roboto', sans-serif;
+    overflow: hidden;
+    word-break: break-all;
 
     display: flex;
     justify-content: center;
@@ -17,7 +19,7 @@ body {
     align-items: center;
     flex-direction: column;
 
-    z-index: 1;
+    z-index: 2;
     position: fixed;
     top: 0;
 }
@@ -42,7 +44,7 @@ body {
     color: #D7D7D7;
 }
 
-.inicial div {
+.inicial button {
     margin-top: 20px;
     width: 149px;
     height: 65px;
@@ -50,6 +52,8 @@ body {
     border-radius: 9px;
     color: #696969;
     font-size: 30px;
+    border: 0;
+    outline: 0;
 
     display: flex;
     align-items:  center;
@@ -88,6 +92,15 @@ body {
     padding: 110px 0;
 }
 
+.time {
+    color: #AAAAAA;
+}
+
+strong {
+    font-weight: 800;
+    font-style: bold;
+}
+
 .mensagem {
     padding: 15px 15px;
     margin-bottom: 8px;
@@ -123,8 +136,58 @@ input {
     width: 500px;
     height: 78px;
     border: 0;
+    outline: 0;
 }
 
-input, textarea, select {
-    outline: 0;
+.digitar input {
+    font-size: 20px;
+}
+
+.menu {
+    z-index: 1;
+    position: fixed;
+    top: 0;
+}
+
+.visivel {
+    width: 614px;
+    height: 100%;
+    overflow: hidden;
+    background-color: rgba(0, 0, 0, 0.6);
+    transition: all 2s;
+}
+
+.visivel .menulateral{
+    background-color: #FFFFFF;
+    width: 414px;
+    height: 100%;
+    right:  -414px;
+    position: absolute;
+    transform:  translate(-414px, 0);
+    transition: all 2s;
+}
+
+p  {
+    height: 80px;
+    font-size: 20px;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.usuarios {
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+}
+
+.icone {
+    margin: 8px 18px;
+    font-size: 40px;
+}
+
+.nomeUsuarios {
+    font-weight: 400;
+    font-size: 24px;
 }
